fix overflowing properties

--- a/frontend/app/less/component-properties.less
+++ b/frontend/app/less/component-properties.less
@@ -63,7 +63,7 @@
 }
 
 .PropertyPanel-content {
-  height: calc(~"100% - 2.55em");
+  height: calc(~"100% - 3.5em");
   padding: 0 10px;
   overflow: auto;
   padding: 1em;
